--- a/index.html
+++ b/index.html
@@ -219,44 +219,74 @@
       </div>
     </div>
   </section>
-  Frequently Asked Questions
-  
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
-
+  <section class="faq-section">
+    <h2 class="faq-h2">
+      Frequently Asked Questions
+    </h2>
+    <p class="faq-p">
+      Here are some of our FAQs. If you have any other questions you’d like 
+      answered please feel free to email us.
+    </p>
   <!-- Question 1 -->
-  What is Bookmark?
-
-  <!-- Answer 1 -->
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
-
-  <!-- Question 2 -->
-  How can I request a new browser?
-
-  <!-- Answer 2 -->
-  Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
-
+  <div class="faq-btn-cont">
+    <div class="faq-btn-1">
+      <button onclick="show_hide_faq1()">
+        What is Bookmark?
+        <img role="presentation" alt="" id="open-arrow1" src="images/icon-arrow-open.svg">
+      </button>
+      <!-- Answer 1 -->
+      <p id="faq-answer1">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
+        justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+      </p>
+    </div>
+    <div class="faq-btn-2">
+      <!-- Question 2 -->
+      <button onclick="show_hide_faq2()">
+        How can I request a new browser?
+        <img role="presentation" alt="" id="open-arrow2" src="images/icon-arrow-open.svg">
+        <!--<img role="presentation" alt="" id="close-arrow"src="images/icon-arrow-close.svg">-->
+      </button>
+      <p id="faq-answer2">
+       <!-- Answer 2 -->
+        Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
+        Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+        ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
+        Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+      </p>
+    </div>
   <!-- Question 3 -->
-  Is there a mobile app?
-
-  <!-- Answer 3 -->
-  Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum.
-
-  <!-- Question 4 -->
-  What about other Chromium browsers?
-
-  <!-- Answer 4 -->
-  Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
-
-  More Info
-
+    <div class="faq-btn-3">
+      <button onclick="show_hide_faq3()">
+        Is there a mobile app?
+        <img role="presentation" alt="" id="open-arrow3" src="images/icon-arrow-open.svg">
+      </button>
+      <!-- Answer 3 -->
+      <p id="faq-answer3">
+        Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
+        urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
+        sollicitudin ex et ultricies bibendum.
+      </p>
+    </div>
+    <div class="faq-btn-4">
+      <!-- Question 4 -->
+      <button onclick="show_hide_faq4()">
+        What about other Chromium browsers?
+        <img role="presentation" alt="" id="open-arrow4" src="images/icon-arrow-open.svg">
+      </button>
+      <!-- Answer 4 -->
+      <p id="faq-answer4">
+        Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
+        vitae neque eget nisl gravida pellentesque non ut velit.
+      </p>
+    </div>
+  </div>
+  <div class="info-btn">
+    <button>
+      More Info
+    </button>
+  </div>
+  </section>
   35,000+ already joined
 
   Stay up-to-date with what we’re doing
