--- a/index.html
+++ b/index.html
@@ -102,16 +102,19 @@
           Simple Bookmarking
         </button>
       </div>
+      <div id="border-cont1"></div>
       <div class="speedy-btn-cont">
         <button onclick="toggleSpeedy()" id="speedy-btn">
           Speedy Searching
         </button>
       </div>
+      <div id="border-cont2"></div>
       <div class="easy-btn-cont">
         <button onclick="toggleEasy()" id="easy-btn">
           Easy Sharing
         </button>
       </div>
+      <div id="border-cont3"></div>
     </div>
     <div id="bookmark-div">
       <div id="tab-1-img-cont">
@@ -302,7 +305,6 @@
       <div class="email-validation" aria-live="assertive">Whoops, make sure it's an email</div>
       <label></label>
       <button aria-label="email" type="submit">Contact Us</button>
-
     </form>
   </section>
   <footer>
@@ -311,13 +313,11 @@
       <li>
         <a href="#">
           Features
-      
         </a>
       </li>
       <li>
         <a href="#">
           Pricing
-      
         </a>
       </li>
       <li>
@@ -340,7 +340,7 @@
     </ul>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/YousefKhalid-iq/bookmark-landing-page">Yousef Khalid</a>.
     </p>
   </footer>
   <script src="main.js"></script>
