--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a class="login-link" href="#">
-              Login
+              <span>Login</span>
             </a>
           </li>
         </ul>
@@ -66,25 +66,26 @@
         </ul>
       </div>
     </nav>
-    <div class="intro-img-cont">
-
-      <img alt="illustration hero image" class="intro-img" src="images/illustration-hero.svg">
-    </div>
     <section class="header-text">
-      <h1>
-        A Simple Bookmark Manager
-      </h1>
-      <p class="header-p">
-        A clean and simple interface to organize your   favourite websites. Open a new 
-        browser tab and see your sites load instantly. Try it for free.
-      </p>
-      <div class="header-btn-cont">
-        <button class="chrome-btn">
-          Get it on Chrome
-        </button>
-        <button class="firefox-btn">
-          Get it on Firefox
-        </button>
+      <div class="intro-img-cont">
+        <img alt="illustration hero image" class="intro-img" src="images/illustration-hero.svg">
+      </div>
+      <div class="text-cont">
+        <h1>
+          A Simple Bookmark Manager
+        </h1>
+        <p class="header-p">
+          A clean and simple interface to organize your   favourite websites. Open a new 
+          browser tab and see your sites load instantly. Try it for free.
+        </p>
+        <div class="header-btn-cont">
+          <button class="chrome-btn">
+            Get it on Chrome
+          </button>
+          <button class="firefox-btn">
+            Get it on Firefox
+          </button>
+        </div>
       </div>
     </section>
   </header>
@@ -101,20 +102,20 @@
         <button onclick="toggleSimple()" id="simple-btn">
           Simple Bookmarking
         </button>
+        <div id="border-cont1"></div>
       </div>
-      <div id="border-cont1"></div>
       <div class="speedy-btn-cont">
         <button onclick="toggleSpeedy()" id="speedy-btn">
           Speedy Searching
         </button>
+        <div id="border-cont2"></div>
       </div>
-      <div id="border-cont2"></div>
       <div class="easy-btn-cont">
         <button onclick="toggleEasy()" id="easy-btn">
           Easy Sharing
         </button>
+        <div id="border-cont3"></div>
       </div>
-      <div id="border-cont3"></div>
     </div>
     <div id="bookmark-div">
       <div id="tab-1-img-cont">
