--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a class="login-link" href="#">
-              <span>Login</span>
+              Login
             </a>
           </li>
         </ul>
@@ -118,54 +118,66 @@
       </div>
     </div>
     <div id="bookmark-div">
-      <div id="tab-1-img-cont">
-        <img alt="illustration tab 1 image" class="tab-1-img" src="images/illustration-features-tab-1.svg">
-      </div>
-      <h2 class="bookmark-h2">
-        Bookmark in one click
-      </h2>
-      <p class="bookmark-p">
-        Organize your bookmarks however you like. Our simple drag-and-drop interface 
-        gives you complete control over how you manage your favourite sites.
-      </p>
-      <div class="more-info-btn">
-        <button>
-          More Info
-        </button>
+      <div id="bookmark-flex">
+        <div id="tab-1-img-cont">
+          <img alt="illustration tab 1 image" class="tab-1-img" src="images/illustration-features-tab-1.svg">
+        </div>
+        <div class="bookmark-text-cont">
+          <h2 class="bookmark-h2">
+            Bookmark in one click
+          </h2>
+          <p class="bookmark-p">
+            Organize your bookmarks however you like. Our simple drag-and-drop interface 
+            gives you complete control over how you manage your favourite sites.
+          </p>
+          <div class="more-info-btn">
+            <button>
+              More Info
+            </button>
+          </div>
+        </div>
       </div>
     </div>
     <div id="intelligent-div">
-      <div class="tab-2-img-cont">
-        <img alt="illustration tab 2 image" class="tab-2-img" src="images/illustration-features-tab-2.svg">
-      </div>
-      <h2 class="intelligent-h2">
-        Intelligent search
-      </h2>
-      <p class="intelligent-p">
-        Our powerful search feature will help you find saved sites in no time at all. 
-        No need to trawl through all of your bookmarks.
-      </p>
-      <div class="more-info-btn">
-        <button>
-          More Info
-        </button>
+      <div id="intelligent-flex">
+        <div class="tab-2-img-cont">
+          <img alt="illustration tab 2 image" class="tab-2-img" src="images/illustration-features-tab-2.svg">
+        </div>
+        <div class="intelligent-text-cont"> 
+          <h2 class="intelligent-h2">
+            Intelligent search
+          </h2>
+          <p class="intelligent-p">
+            Our powerful search feature will help you find saved sites in no time at all. 
+            No need to trawl through all of your bookmarks.
+          </p>
+          <div class="more-info-btn">
+            <button>
+              More Info
+            </button>
+          </div>
+        </div>
       </div>
     </div>
     <div id="share-div">
-      <div class="tab-3-img-cont">
-        <img alt="illustration tab 3 image" class="tab-3-img" src="images/illustration-features-tab-3.svg">
-      </div>
-      <h2 class="share-h2">
-        Share your bookmarks
-      </h2>
-      <p class="share-p">
-        Easily share your bookmarks and collections with others. Create a shareable 
-        link that you can send at the click of a button.
-      </p>
-      <div class="more-info-btn">
-        <button>
-          More Info
-        </button>
+      <div id="share-flex">
+        <div class="tab-3-img-cont">
+          <img alt="illustration tab 3 image" class="tab-3-img" src="images/illustration-features-tab-3.svg">
+        </div>
+        <div class="share-text-cont">
+          <h2 class="share-h2">
+            Share your bookmarks
+          </h2>
+          <p class="share-p">
+            Easily share your bookmarks and collections with others. Create a shareable 
+            link that you can send at the click of a button.
+          </p>
+          <div class="more-info-btn">
+            <button>
+              More Info
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
