--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a class="login-link" href="#">
-              Login
+              <span>Login</span>
             </a>
           </li>
         </ul>
@@ -189,49 +189,51 @@
       We’ve got more browsers in the pipeline. Please do let us know if you’ve 
       got a favourite you’d like us to prioritize.
     </p>
-    <div class="google-div">
-      <img role="presentation" alt="" class="extension-logos" src="images/logo-chrome.svg">
-      <p class="add-para">
-        Add to Chrome
-      </p>
-      <p class="version-para">
-        Minimum version 62
-      </p>
-      <img role="presentation" alt="" class="dots-img" src="images/bg-dots.svg">
-      <div class="install-btn-cont">
-        <button>
-          Add & Install Extension
-        </button>
+    <div class="extensions-cont">
+      <div class="google-div">
+        <img role="presentation" alt="" class="extension-logos" src="images/logo-chrome.svg">
+        <p class="add-para">
+          Add to Chrome
+        </p>
+        <p class="version-para">
+          Minimum version 62
+        </p>
+        <img role="presentation" alt="" class="dots-img" src="images/bg-dots.svg">
+        <div class="install-btn-cont">
+          <button>
+            Add & Install Extension
+          </button>
+        </div>
       </div>
-    </div>
-    <div class="firefox-div">
-      <img role="presentation" alt="" class="extension-logos" src="images/logo-firefox.svg">
-      <p class="add-para">
-        Add to Firefox
-      </p>
-      <p class="version-para">
-        Minimum version 55
-      </p>
-      <img role="presentation" alt="" class="dots-img" src="images/bg-dots.svg">
-      <div class="install-btn-cont">
-        <button>
-          Add & Install Extension
-        </button>
+      <div class="firefox-div">
+        <img role="presentation" alt="" class="extension-logos" src="images/logo-firefox.svg">
+        <p class="add-para">
+          Add to Firefox
+        </p>
+        <p class="version-para">
+          Minimum version 55
+        </p>
+        <img role="presentation" alt="" class="dots-img" src="images/bg-dots.svg">
+        <div class="install-btn-cont">
+          <button>
+            Add & Install Extension
+          </button>
+        </div>
       </div>
-    </div>
-    <div class="opera-div">
-      <img role="presentation" alt="" class="extension-logos" src="images/logo-opera.svg">
-      <p class="add-para">
-        Add to Opera
-      </p>
-      <p class="version-para">
-        Minimum version 46
-      </p>
-      <img role="presentation" alt="" class="dots-img" src="images/bg-dots.svg">
-      <div class="install-btn-cont">
-        <button>
-          Add & Install Extension
-        </button>
+      <div class="opera-div">
+        <img role="presentation" alt="" class="extension-logos" src="images/logo-opera.svg">
+        <p class="add-para">
+          Add to Opera
+        </p>
+        <p class="version-para">
+          Minimum version 46
+        </p>
+        <img role="presentation" alt="" class="dots-img" src="images/bg-dots.svg">
+        <div class="install-btn-cont">
+          <button>
+            Add & Install Extension
+          </button>
+        </div>
       </div>
     </div>
   </section>
