--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a class="login-link" href="#">
-              <span>Login</span>
+              Login
             </a>
           </li>
         </ul>
@@ -316,48 +316,53 @@
       Stay up-to-date with what we’re doing
     </h2>
     <form action="#">
-      <input class="email-input" type="email" name="email" placeholder="Enter your email address" aria-label="error__message">
-      <div class="email-validation" aria-live="assertive">Whoops, make sure it's an email</div>
+      <div class="form-input-flex">
+        <input class="email-input" type="email" name="email" placeholder="Enter your email address" aria-label="error__message">
+        <div class="email-validation" aria-live="assertive">Whoops, make sure it's an email</div>
+      </div>
       <label></label>
       <button aria-label="email" type="submit">Contact Us</button>
     </form>
   </section>
   <footer>
-    <img role="presentation" alt="" class="logo-img-footer" src="images/logo-bookmark-footer.svg">
-    <ul class="footer-links">
-      <li>
-        <a href="#">
-          Features
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          Pricing
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          Contact
-        </a>
-      </li>
-    </ul>
-    <ul class="footer-socials">
-      <li>
-        <a href="#">
-          <img src="images/icon-facebook.svg">
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/icon-twitter.svg">
-        </a>
-      </li>
-    </ul>
+    <div class="footer-flex">
+      <img role="presentation" alt="" class="logo-img-footer" src="images/logo-bookmark-footer.svg">
+      <ul class="footer-links">
+        <li>
+          <a href="#">
+            Features
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Pricing
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Contact
+          </a>
+        </li>
+      </ul>
+      <ul class="footer-socials">
+        <li>
+          <a href="#">
+            <img src="images/icon-facebook.svg">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="images/icon-twitter.svg">
+          </a>
+        </li>
+      </ul>
+    </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/YousefKhalid-iq/bookmark-landing-page">Yousef Khalid</a>.
     </p>
   </footer>
+  
   <script src="main.js"></script>
 </body>
 </html>
