--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Frontend Mentor | Bookmark landing page</title>
 </head>
 <body>
-  <header>
-    <nav>
+  <header role="contentinfo">
+    <nav role="navigation">
       <div class="header-flex">
         <a href="#">
           <img role="presentation" alt="" class="logo-img" src="images/logo-bookmark.svg">
@@ -55,12 +55,12 @@
         <ul class="header-socials">
           <li>
             <a href="#">
-              <img src="images/icon-facebook.svg">
+              <img aria-label="facebook" alt="" role="presentation" src="images/icon-facebook.svg">
             </a>
           </li>
           <li>
-            <a href="#">
-              <img src="images/icon-twitter.svg">
+            <a aria-label="twitter" href="#">
+              <img alt="" role="presentation" src="images/icon-twitter.svg">
             </a>
           </li>
         </ul>
@@ -89,7 +89,7 @@
       </div>
     </section>
   </header>
-  <section class="features-section">
+  <section role="contentinfo" class="features-section">
     <h2 class="features-h2">
       Features
     </h2>
@@ -181,7 +181,7 @@
       </div>
     </div>
   </section>
-  <section class="extension-section">
+  <section role="contentinfo" class="extension-section">
     <h2 class="extension-h2">
       Download the extension
     </h2>
@@ -237,7 +237,7 @@
       </div>
     </div>
   </section>
-  <section class="faq-section">
+  <section role="contentinfo" class="faq-section">
     <h2 class="faq-h2">
       Frequently Asked Questions
     </h2>
@@ -324,7 +324,7 @@
       <button aria-label="email" type="submit">Contact Us</button>
     </form>
   </section>
-  <footer>
+  <footer role="contentinfo">
     <div class="footer-flex">
       <img role="presentation" alt="" class="logo-img-footer" src="images/logo-bookmark-footer.svg">
       <ul class="footer-links">
@@ -347,12 +347,12 @@
       <ul class="footer-socials">
         <li>
           <a href="#">
-            <img src="images/icon-facebook.svg">
+            <img aria-label="facebook" alt="" role="presentation" src="images/icon-facebook.svg">
           </a>
         </li>
         <li>
-          <a href="#">
-            <img src="images/icon-twitter.svg">
+          <a aria-label="twitter" href="#">
+            <img alt="" role="presentation" src="images/icon-twitter.svg">
           </a>
         </li>
       </ul>
