--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <title>Frontend Mentor | Bookmark landing page</title>
 </head>
 <body>
-  <header role="contentinfo">
+  <header>
     <nav role="navigation">
       <div class="header-flex">
-        <a href="#">
+        <a aria-label="logo" href="#">
           <img role="presentation" alt="" class="logo-img" src="images/logo-bookmark.svg">
         </a>
         <div class="toggle-on-cont">
@@ -54,8 +54,8 @@
         </ul>
         <ul class="header-socials">
           <li>
-            <a href="#">
-              <img aria-label="facebook" alt="" role="presentation" src="images/icon-facebook.svg">
+            <a aria-label="facebook" href="#">
+              <img  alt="" role="presentation" src="images/icon-facebook.svg">
             </a>
           </li>
           <li>
@@ -89,7 +89,7 @@
       </div>
     </section>
   </header>
-  <section role="contentinfo" class="features-section">
+  <section class="features-section">
     <h2 class="features-h2">
       Features
     </h2>
@@ -181,7 +181,7 @@
       </div>
     </div>
   </section>
-  <section role="contentinfo" class="extension-section">
+  <section class="extension-section">
     <h2 class="extension-h2">
       Download the extension
     </h2>
@@ -237,7 +237,7 @@
       </div>
     </div>
   </section>
-  <section role="contentinfo" class="faq-section">
+  <section class="faq-section">
     <h2 class="faq-h2">
       Frequently Asked Questions
     </h2>
@@ -324,7 +324,7 @@
       <button aria-label="email" type="submit">Contact Us</button>
     </form>
   </section>
-  <footer role="contentinfo">
+  <footer>
     <div class="footer-flex">
       <img role="presentation" alt="" class="logo-img-footer" src="images/logo-bookmark-footer.svg">
       <ul class="footer-links">
